[package]
name = "file-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.6"
futures-util = "0.3"
image = "0.24"
pdf-writer = "0.7"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
mime_guess = "2.0"
