[package]
name = "file-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.6"
futures-util = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] } # Optimized with only needed features
pdf-writer = "0.7"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
mime_guess = "2.0"
log = "0.4" # Added for proper logging
